Finish sticky header, second section, added a more modual approach to use classes in the markup

--- a/sass/helpers/_mixin.scss
+++ b/sass/helpers/_mixin.scss
@@ -88,3 +88,25 @@
         }
     }
 }
+
+// Font Mixin's
+@mixin font-size($size: $baseFontSize, $lineHeight: $baseLineHeight) {
+    font-size: $size;
+    line-height: $lineHeight;
+}
+
+
+@mixin font-smoothing($value: antialiased) {
+  @if $value == antialiased {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  @else if $value == subpixel-antialiased {
+    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing: auto;
+  }
+  @else {
+    -webkit-font-smoothing: $value;
+     -moz-osx-font-smoothing: $value;
+  }
+}
