--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,104 @@
+/* Slider */
+/* line 3, ../sass/vendors/bourbon/_slick.scss */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* line 18, ../sass/vendors/bourbon/_slick.scss */
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+/* line 25, ../sass/vendors/bourbon/_slick.scss */
+.slick-list:focus {
+  outline: none;
+}
+/* line 29, ../sass/vendors/bourbon/_slick.scss */
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+/* line 34, ../sass/vendors/bourbon/_slick.scss */
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+/* line 43, ../sass/vendors/bourbon/_slick.scss */
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+}
+/* line 49, ../sass/vendors/bourbon/_slick.scss */
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+/* line 55, ../sass/vendors/bourbon/_slick.scss */
+.slick-track:after {
+  clear: both;
+}
+/* line 59, ../sass/vendors/bourbon/_slick.scss */
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+/* line 63, ../sass/vendors/bourbon/_slick.scss */
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+/* line 67, ../sass/vendors/bourbon/_slick.scss */
+[dir="rtl"] .slick-slide {
+  float: right;
+}
+/* line 73, ../sass/vendors/bourbon/_slick.scss */
+.slick-slide.slick-loading img {
+  display: none;
+}
+/* line 79, ../sass/vendors/bourbon/_slick.scss */
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+/* line 83, ../sass/vendors/bourbon/_slick.scss */
+.slick-initialized .slick-slide {
+  display: block;
+}
+/* line 87, ../sass/vendors/bourbon/_slick.scss */
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+/* line 91, ../sass/vendors/bourbon/_slick.scss */
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Set default font family to sans-serif.
@@ -433,6 +534,11 @@ th {
   padding: 0;
 }
 
+/* line 426, ../sass/base/_reset.scss */
+p {
+  margin: 0;
+}
+
 @font-face {
   font-family: HindiBold;
   src: url("../fonts/site/Hind-Bold.ttf") format("truetype");
@@ -453,12 +559,18 @@ th {
   font-family: HindiSemiBold;
   src: url("../fonts/site/Hind-Semibold.ttf") format("truetype");
 }
-/* line 32, ../sass/base/_typography.scss */
+/* line 31, ../sass/base/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
 
 /* line 1, ../sass/components/_components.scss */
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 5, ../sass/components/_components.scss */
 .container-fluid {
   max-width: 1700px;
   margin: 0 auto;
@@ -467,18 +579,63 @@ h1, h2, h3, h4, h5, h6 {
   clear: both;
 }
 @media only screen and (min-width: 1180px) {
-  /* line 1, ../sass/components/_components.scss */
+  /* line 5, ../sass/components/_components.scss */
   .container-fluid {
     width: 1180px;
   }
 }
 
-/* line 12, ../sass/components/_components.scss */
+/* line 16, ../sass/components/_components.scss */
 .main-content > :first-child {
   padding-top: 200px;
 }
 
-/* line 18, ../sass/components/_components.scss */
+/* line 22, ../sass/components/_components.scss */
+.white-section {
+  background-color: #ffffff;
+}
+/* line 28, ../sass/components/_components.scss */
+.white-section__header .section-intro {
+  margin: 80px 0px 30px 0;
+  font-family: "HindiRegular";
+  color: #626262;
+  font-size: 16px;
+  line-height: 1.8;
+}
+/* line 35, ../sass/components/_components.scss */
+.white-section__header .section-intro strong {
+  font-family: "HindiBold";
+}
+/* line 37, ../sass/components/_components.scss */
+.white-section__header .section-intro:before, .white-section__header .section-intro:after {
+  content: '';
+  width: 126px;
+  height: 2px;
+  display: inline-block;
+  vertical-align: middle;
+  background: #f0f0f0;
+}
+/* line 46, ../sass/components/_components.scss */
+.white-section__header .section-intro:before {
+  margin-right: 7px;
+}
+/* line 49, ../sass/components/_components.scss */
+.white-section__header .section-intro:after {
+  margin-left: 7px;
+}
+/* line 54, ../sass/components/_components.scss */
+.white-section__header .gradientTitle {
+  color: #2476cf;
+  margin-bottom: 7px;
+  font-family: "HindiLight";
+  font-size: 52px;
+  line-height: 1.8;
+  background: -webkit-linear-gradient(150deg, #6e3cb7 45%, #2476cf 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* line 69, ../sass/components/_components.scss */
 .round-button {
   padding: 10px 25px;
   text-decoration: none;
@@ -488,42 +645,178 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 25px;
 }
 
-/* line 26, ../sass/components/_components.scss */
+/* line 77, ../sass/components/_components.scss */
 .btn {
+  padding: 10px 20px;
   color: #ffffff;
-  font-family: "HindiBold";
+  line-height: 1;
+  font-family: "HindiSemiBold";
+  font-size: 18px;
+  line-height: 1.8;
+}
+/* line 86, ../sass/components/_components.scss */
+.btn--simple {
+  border: 1px solid #076fe4;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 0 0 #8ebcf1;
+  color: white;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: bold;
+  background-color: #4294f0;
+  background-image: -webkit-linear-gradient(#4294f0, #0776f3);
+  background-image: linear-gradient(#4294f0, #0776f3);
+  padding: 7px 18px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #0065d6;
+  background-clip: padding-box;
+}
+/* line 137, ../sass/vendors/bourbon/_bourbon-deprecated-upcoming.scss */
+.btn--simple:hover:not(:disabled) {
+  background-color: #2f87ea;
+  background-image: -webkit-linear-gradient(#2f87ea, #086fe3);
+  background-image: linear-gradient(#2f87ea, #086fe3);
+  box-shadow: inset 0 1px 0 0 #60a2ec;
+  cursor: pointer;
+}
+/* line 154, ../sass/vendors/bourbon/_bourbon-deprecated-upcoming.scss */
+.btn--simple:active:not(:disabled), .btn--simple:focus:not(:disabled) {
+  border: 1px solid #076fe4;
+  box-shadow: inset 0 0 8px 4px #0868d3, inset 0 0 8px 4px #0868d3;
+}
+/* line 59, ../sass/vendors/bourbon/_bourbon-deprecated-upcoming.scss */
+.btn--simple:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+/* line 89, ../sass/components/_components.scss */
+.btn--pill {
+  border: 1px solid #3371b2;
+  border-color: #3371b2 #2457a3 #164297;
+  border-radius: 16px;
+  box-shadow: inset 0 1px 0 0 #64a9f2;
+  color: white;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: normal;
+  line-height: 1;
+  background-color: #4294f0;
+  background-image: -webkit-linear-gradient(#4294f0, #0156fe);
+  background-image: linear-gradient(#4294f0, #0156fe);
+  padding: 7px 18px;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 -1px 1px #2762bf;
+  background-clip: padding-box;
+}
+/* line 282, ../sass/vendors/bourbon/_bourbon-deprecated-upcoming.scss */
+.btn--pill:hover:not(:disabled) {
+  background-color: #2d88ee;
+  background-image: -webkit-linear-gradient(#2d88ee, #1554ce);
+  background-image: linear-gradient(#2d88ee, #1554ce);
+  background-clip: padding-box;
+  border: 1px solid #2062a7;
+  border-color: #2062a7 #0e479a #01318e;
+  box-shadow: inset 0 1px 0 0 #519cf0;
+  cursor: pointer;
+  text-shadow: 0 -1px 1px #134faf;
+}
+/* line 311, ../sass/vendors/bourbon/_bourbon-deprecated-upcoming.scss */
+.btn--pill:active:not(:disabled), .btn--pill:focus:not(:disabled) {
+  background: #226edd;
+  border: 1px solid #0d3c8c;
+  border-bottom: 1px solid #062d8d;
+  box-shadow: inset 0 0 6px 3px #0c44b8;
+  text-shadow: 0 -1px 1px #1a52aa;
+}
+/* line 59, ../sass/vendors/bourbon/_bourbon-deprecated-upcoming.scss */
+.btn--pill:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+/* line 95, ../sass/components/_components.scss */
+.btn--blue {
+  color: #ffffff;
+  background: #0070b8;
 }
 
-/* line 1, ../sass/layout/header/_header.scss */
-header {
-  position: relative;
+/* line 102, ../sass/components/_components.scss */
+.main-generic-link {
+  color: #0070b8;
+  font-family: "HindiSemiBold";
+  text-decoration: none;
+  font-size: 15px;
+  line-height: 1.8;
 }
-/* line 4, ../sass/layout/header/_header.scss */
-header .nav-container {
+
+/* line 111, ../sass/components/_components.scss */
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+}
+
+/* line 2, ../sass/layout/header/_header.scss */
+.header {
   width: 100%;
-  margin-top: 50px;
-  position: absolute;
+  height: 120px;
+  padding-top: 50px;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  position: fixed;
+  z-index: 1;
+  background-color: rgba(0, 107, 177, 0);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  -moz-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  -webkit-transition-property: height, padding-top, padding-left, background-color;
+  -moz-transition-property: height, padding-top, padding-left, background-color;
+  transition-property: height, padding-top, padding-left, background-color;
+}
+/* line 16, ../sass/layout/header/_header.scss */
+.header--hidden {
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+/* line 20, ../sass/layout/header/_header.scss */
+.header--in-content {
+  padding-top: 10px;
+  background-color: rgba(0, 107, 177, 0.9);
 }
 
-/* line 11, ../sass/layout/header/_header.scss */
+/* line 27, ../sass/layout/header/_header.scss */
+.nav-container {
+  height: 100%;
+  max-width: 1180px;
+}
+
+/* line 32, ../sass/layout/header/_header.scss */
 .logo {
   float: left;
 }
 
-/* line 15, ../sass/layout/header/_header.scss */
+/* line 36, ../sass/layout/header/_header.scss */
 .main-nav {
   float: right;
   list-style-type: none;
 }
-/* line 19, ../sass/layout/header/_header.scss */
+/* line 40, ../sass/layout/header/_header.scss */
 .main-nav__listItem {
   display: inline-block;
 }
-/* line 22, ../sass/layout/header/_header.scss */
+/* line 43, ../sass/layout/header/_header.scss */
 .main-nav__listItem:not(:first-child) a {
   margin-left: 30px;
 }
-/* line 26, ../sass/layout/header/_header.scss */
+/* line 47, ../sass/layout/header/_header.scss */
 .main-nav__listItem a {
   padding: 6px 15px 3px 15px;
   color: #fff;
@@ -532,7 +825,7 @@ header .nav-container {
   text-decoration: none;
   text-transform: uppercase;
 }
-/* line 34, ../sass/layout/header/_header.scss */
+/* line 55, ../sass/layout/header/_header.scss */
 .main-nav__listItem a:hover, .main-nav__listItem a.active {
   padding: 6px 15px 3px 15px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -588,35 +881,138 @@ footer .footer-container {
   text-transform: uppercase;
 }
 
-/* line 1, ../sass/pages/homepage/_homepage.scss */
-.homePage {
+/* line 2, ../sass/pages/homepage/_homepage.scss */
+.home-hero {
+  height: 450px;
   padding-bottom: 150px;
-  background: url("../images/hero.jpg") no-repeat center;
+  background: url("../images/homepage/hero.jpg") no-repeat center;
   background-size: cover;
 }
-/* line 6, ../sass/pages/homepage/_homepage.scss */
-.homePage__intro {
+/* line 8, ../sass/pages/homepage/_homepage.scss */
+.home-hero__intro {
+  max-width: 800px;
   color: #ffffff;
   text-align: center;
+  top: 50%;
+  display: block;
+  position: relative;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
-/* line 12, ../sass/pages/homepage/_homepage.scss */
-.homePage__intro__message h1 {
+/* line 15, ../sass/pages/homepage/_homepage.scss */
+.home-hero__intro .icon {
+  margin-bottom: 40px;
+  font-size: 70px;
+}
+/* line 22, ../sass/pages/homepage/_homepage.scss */
+.home-hero__intro__message h1 {
   margin: 0;
   font-size: 66px;
-  line-height: 66px;
+  line-height: 1;
   font-family: "HindiBold";
 }
-/* line 18, ../sass/pages/homepage/_homepage.scss */
-.homePage__intro__message p {
+/* line 28, ../sass/pages/homepage/_homepage.scss */
+.home-hero__intro__message p {
+  margin: 50px 0;
   font-size: 22px;
   line-height: 30px;
   font-family: "HindiMedium";
 }
-/* line 24, ../sass/pages/homepage/_homepage.scss */
-.homePage__intro__message .round-button {
+/* line 35, ../sass/pages/homepage/_homepage.scss */
+.home-hero__intro__message .round-button {
+  color: #ffffff;
   font-size: 16px;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+/* line 41, ../sass/pages/homepage/_homepage.scss */
+.home-hero__intro__message .round-button:hover {
+  color: #0070b8;
+  background: #ffffff;
+}
+
+/* line 51, ../sass/pages/homepage/_homepage.scss */
+.services {
+  text-align: center;
+  margin-bottom: 130px;
+  background: url("../images/homepage/world-map-dots.png") no-repeat center;
+}
+/* line 58, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .main-intro {
+  font-family: "HindiRegular";
+  font-size: 20px;
+  line-height: 1.8;
+  line-height: 1.3;
+  color: #2f2f2f;
+}
+/* line 65, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items {
+  margin-top: 50px;
+  margin-bottom: 70px;
+}
+/* line 69, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items li {
+  width: 321px;
+  display: inline-block;
+  list-style-type: none;
+}
+/* line 74, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items li:not(:first-child) {
+  margin-left: 40px;
+}
+/* line 78, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items li .icon {
+  color: #50c2c9;
+  margin-bottom: 40px;
+  font-size: 90px;
+  line-height: 1.8;
+}
+/* line 85, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items__title {
+  font-family: "HindiBold";
+  font-size: 20px;
+  line-height: 1.8;
+  color: #2f2f2f;
+}
+/* line 91, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items__content {
+  font-family: "HindiMedium";
+  margin-bottom: 20px;
+  line-height: 1.5;
+  color: #2f2f2f;
+  font-size: 15px;
+  line-height: 1.8;
+}
+/* line 101, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .lastInfo {
+  margin: 0 auto;
+  max-width: 840px;
+  color: #0070b8;
+  font-family: "HindiSemiBold";
+  text-align: left;
+  font-size: 18px;
+  line-height: 1.8;
+}
+/* line 110, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .lastInfo strong {
+  font-family: "HindiBold";
+}
+/* line 114, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .lastInfo span, .services__main-content .lastInfo .btn {
+  display: inline-block;
+}
+/* line 118, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .lastInfo span:first-child {
+  width: 650px;
+  line-height: 1.3;
+}
+/* line 123, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .lastInfo .btn {
+  float: right;
+  box-shadow: none;
 }
 
 /*# sourceMappingURL=style.css.map */
