--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -1,3 +1,7 @@
+body{
+	@include font-smoothing(antialiased);
+}
+
 .container-fluid {
     max-width: 1700px;
     margin: 0 auto;
@@ -14,7 +18,54 @@
     }
 }
 
-// Buttons
+// Sections
+.white-section{
+	background-color: #ffffff;
+	
+	// Header
+	&__header{
+
+		.section-intro{
+		   margin: 80px 0px 30px 0;
+			font-family: $hi-r;
+			color: darken($light-grey, 20%);
+
+			@include font-size(16px);
+
+			strong{font-family: $hi-b;}
+			
+			&:before, &:after{
+				content: '';
+				width: 126px;
+				height: 2px;
+				display: inline-block;
+				vertical-align: middle;
+				background: $off-white;
+			}
+
+			&:before{
+				margin-right: 7px;				
+			}
+			&:after{
+				margin-left: 7px;
+			}
+		}
+
+		.gradientTitle{
+			color: $secondary-blue;
+			margin-bottom: 7px;
+			font-family: $hi-l;
+
+			@include font-size(52px);
+
+			background: -webkit-linear-gradient(150deg, $violet 45%, $secondary-blue 100%);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+		}
+	}
+}
+
+// Round Buttons
 .round-button{
 	padding: 10px 25px;
 	text-decoration: none;
@@ -22,8 +73,44 @@
 	@include border-radius(25px);
 }
 
-// Button Color
+// Boxed Buttons
 .btn{
-	color: $white;
-	font-family: $hi-b;
+    padding: 10px 20px;
+    color: #ffffff;
+    line-height: 1;
+    font-family: $hi-sb;
+
+    @include font-size(18px);
+    
+    // Styles :: Note, styles coming from bourbon mixin.
+    &--simple{
+        @include button; // default = simple
+    }
+    &--pill{
+        @include button(pill);
+    }
+
+
+    // Button Colors
+    &--blue{
+        color: #ffffff;
+        background: $main-blue;
+    }
+}
+
+// Generic Links
+.main-generic-link{
+	color: $main-blue;
+	font-family: $hi-sb;
+	text-decoration: none;
+
+	@include font-size(15px);
+}
+
+// Icons
+.icon {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	fill: currentColor;
 }
