--- a/sass/layout/header/_header.scss
+++ b/sass/layout/header/_header.scss
@@ -1,11 +1,32 @@
-header{
-	position: relative;
+// Header main settings
+.header{
+	width: 100%;
+	height: 120px;
+	padding-top: 50px;
+	top: 0px; left: 0px;
+	text-align: center;
+	position: fixed;
+	z-index: 1;
+	background-color: rgba(0,107,177,0);
+	
+	@include transition-duration(0.5s);
+	@include transition-timing-function(cubic-bezier( 0.215, 0.610, 0.355, 1.000 )); //P1, P2, P3, P4
+	@include transition-property(height, padding-top, padding-left, background-color);
 
-	.nav-container{
-		width: 100%;
-		margin-top: 50px;
-		position: absolute;
+	&--hidden{
+		@include transform(translateY(-100%));
 	}
+
+	&--in-content {
+		padding-top: 10px;
+		background-color: rgba(0,107,177,0.9);
+	}
+}
+
+// Header Child Elements
+.nav-container{
+	height: 100%;
+	max-width: $desktop;
 }
 
 .logo{
