--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -1,30 +1,128 @@
-.homePage{
+// Section 1
+.home-hero{
+	height: 450px;
 	padding-bottom: 150px;
-	background: url('../images/hero.jpg') no-repeat center;	
+	background: url('../images/homepage/hero.jpg') no-repeat center;	
 	background-size: cover;
 
 	&__intro{
+		max-width: $desktop-sm-hg;
 		color: #ffffff;
 		text-align: center;
+
+		@include vertical-align;
+
+		.icon{
+			margin-bottom: 40px;
+			font-size: 70px;
+		}
 
 		&__message{
 
 			h1{
 				margin: 0;
 				font-size: 66px;
-				line-height: 66px;
+				line-height: 1;
 				font-family: $hi-b;
 			}
 			p{
+			   margin: 50px 0;
 				font-size: 22px;
 				line-height: 30px;
 				font-family: $hi-m;
 			}
 
 			.round-button{
+				color: $white;
 				font-size: 16px;
 				letter-spacing: 2px;
 				text-transform: uppercase;
+
+				&:hover{
+					color: $main-blue;
+					background: $white;
+				}
+			}
+		}
+	}
+}
+
+// Section 2
+.services{
+	text-align: center;
+	margin-bottom: 130px;
+	background: url('../images/homepage/world-map-dots.png') no-repeat center;	
+
+	&__main-content{
+
+		.main-intro{
+			font-family: $hi-r;
+			@include font-size(20px);
+			line-height: 1.3;
+			color: darken($light-grey, 40%);
+		}
+
+		.inline-items{
+		   margin-top: 50px;
+	      margin-bottom: 70px;
+
+			li{
+				width: 321px;
+				display: inline-block;
+				list-style-type: none;
+
+				&:not(:first-child){
+					margin-left: 40px;
+				}
+
+				.icon{
+					color: $teal;
+					margin-bottom: 40px;
+					@include font-size(90px);
+				}
+			}
+
+			&__title{
+				font-family: $hi-b;
+				@include font-size(20px);
+				color: darken($light-grey, 40%);
+			}
+
+			&__content{
+				font-family: $hi-m;
+				margin-bottom: 20px;
+				line-height: 1.5;
+				color: darken($light-grey, 40%);
+
+				@include font-size(15px);
+			}
+		}
+
+		.lastInfo{
+			margin: 0 auto;
+			max-width: 840px;
+			color: $main-blue;
+			font-family: $hi-sb;
+			text-align: left;
+
+			@include font-size(18px);
+
+			strong{
+				font-family: $hi-b;
+			}
+
+			span, .btn{
+				display: inline-block;
+			}
+			
+			span:first-child{
+				width: 650px;
+				line-height: 1.3;
+			}
+
+			.btn{
+				float: right;
+				box-shadow: none;
 			}
 		}
 	}
