--- a/sass/helpers/_mixin.scss
+++ b/sass/helpers/_mixin.scss
@@ -110,3 +110,10 @@
      -moz-osx-font-smoothing: $value;
   }
 }
+
+// Box Shadow
+@mixin box-shadow($shadow...) {
+    -webkit-box-shadow: $shadow;
+    -moz-box-shadow: $shadow;
+    box-shadow: $shadow;
+}
