--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -47,7 +47,7 @@
 	}
 }
 
-// Section 2
+// Services - Section 2
 .services{
 	text-align: center;
 	margin-bottom: 130px;
@@ -125,5 +125,29 @@
 				box-shadow: none;
 			}
 		}
+	}
+}
+
+// Testimonials - 6
+.testimonials{
+	text-align: center;
+	margin-bottom: 130px;
+	background: url('../images/homepage/abstract-connected.png') no-repeat center;	
+
+	// &__main-content{
+
+	// 	.main-intro{
+	// 		font-family: $hi-r;
+	// 		@include font-size(20px);
+	// 		line-height: 1.3;
+	// 		color: darken($light-grey, 40%);
+	// 	}
+	// }
+	.testimonials-slider{
+		max-width: 800px;
+	   margin: 0 auto;
+	   div{
+	   	background: red;
+	   }
 	}
 }
