--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Slider */
 /* line 3, ../sass/vendors/bourbon/_slick.scss */
 .slick-slider {
@@ -757,6 +758,287 @@ body {
   fill: currentColor;
 }
 
+/* Slider */
+/* line 3, ../sass/components/_slick.scss */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* line 18, ../sass/components/_slick.scss */
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+/* line 25, ../sass/components/_slick.scss */
+.slick-list:focus {
+  outline: none;
+}
+/* line 29, ../sass/components/_slick.scss */
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+/* line 34, ../sass/components/_slick.scss */
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+/* line 43, ../sass/components/_slick.scss */
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+}
+/* line 49, ../sass/components/_slick.scss */
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+/* line 55, ../sass/components/_slick.scss */
+.slick-track:after {
+  clear: both;
+}
+/* line 59, ../sass/components/_slick.scss */
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+/* line 63, ../sass/components/_slick.scss */
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+/* line 67, ../sass/components/_slick.scss */
+[dir="rtl"] .slick-slide {
+  float: right;
+}
+/* line 70, ../sass/components/_slick.scss */
+.slick-slide img {
+  display: block;
+}
+/* line 73, ../sass/components/_slick.scss */
+.slick-slide.slick-loading img {
+  display: none;
+}
+/* line 79, ../sass/components/_slick.scss */
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+/* line 83, ../sass/components/_slick.scss */
+.slick-initialized .slick-slide {
+  display: block;
+}
+/* line 87, ../sass/components/_slick.scss */
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+/* line 91, ../sass/components/_slick.scss */
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+/* line 97, ../sass/components/_slick.scss */
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+/* Slider */
+/* line 40, ../sass/components/_slick-theme.scss */
+.slick-loading .slick-list {
+  background: #fff url("./../images/slick-slider/ajax-loader.gif") center center no-repeat;
+}
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url("../fonts/slick-slider/slick.eot");
+  src: url("../fonts/slick-slider/slick.eot?#iefix") format("embedded-opentype"), url("../fonts/slick-slider/slick.woff") format("woff"), url("../fonts/slick-slider/slick.ttf") format("truetype"), url("../fonts/slick-slider/slick.svg#slick") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* Arrows */
+/* line 58, ../sass/components/_slick-theme.scss */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  margin-top: -10px;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+/* line 74, ../sass/components/_slick-theme.scss */
+.slick-prev:hover, .slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent;
+}
+/* line 78, ../sass/components/_slick-theme.scss */
+.slick-prev:hover:before, .slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+/* line 82, ../sass/components/_slick-theme.scss */
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: 0.25;
+}
+
+/* line 87, ../sass/components/_slick-theme.scss */
+.slick-prev:before, .slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: white;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 97, ../sass/components/_slick-theme.scss */
+.slick-prev {
+  left: -25px;
+}
+/* line 99, ../sass/components/_slick-theme.scss */
+[dir="rtl"] .slick-prev {
+  left: auto;
+  right: -25px;
+}
+/* line 103, ../sass/components/_slick-theme.scss */
+.slick-prev:before {
+  content: "←";
+}
+/* line 105, ../sass/components/_slick-theme.scss */
+[dir="rtl"] .slick-prev:before {
+  content: "→";
+}
+
+/* line 111, ../sass/components/_slick-theme.scss */
+.slick-next {
+  right: -25px;
+}
+/* line 113, ../sass/components/_slick-theme.scss */
+[dir="rtl"] .slick-next {
+  left: -25px;
+  right: auto;
+}
+/* line 117, ../sass/components/_slick-theme.scss */
+.slick-next:before {
+  content: "→";
+}
+/* line 119, ../sass/components/_slick-theme.scss */
+[dir="rtl"] .slick-next:before {
+  content: "←";
+}
+
+/* Dots */
+/* line 127, ../sass/components/_slick-theme.scss */
+.slick-slider {
+  margin-bottom: 30px;
+}
+
+/* line 131, ../sass/components/_slick-theme.scss */
+.slick-dots {
+  position: absolute;
+  bottom: -45px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  width: 100%;
+}
+/* line 139, ../sass/components/_slick-theme.scss */
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+/* line 147, ../sass/components/_slick-theme.scss */
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+/* line 159, ../sass/components/_slick-theme.scss */
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none;
+}
+/* line 161, ../sass/components/_slick-theme.scss */
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1;
+}
+/* line 165, ../sass/components/_slick-theme.scss */
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "•";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+/* line 182, ../sass/components/_slick-theme.scss */
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+
 /* line 2, ../sass/layout/header/_header.scss */
 .header {
   width: 100%;
@@ -914,33 +1196,47 @@ footer .footer-container {
   line-height: 1;
   font-family: "HindiBold";
 }
-/* line 28, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 22, ../sass/pages/homepage/_homepage.scss */
+  .home-hero__intro__message h1 {
+    font-size: 55px;
+    line-height: 1;
+  }
+}
+/* line 31, ../sass/pages/homepage/_homepage.scss */
 .home-hero__intro__message p {
   margin: 50px 0;
   font-size: 22px;
   line-height: 30px;
   font-family: "HindiMedium";
 }
-/* line 35, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 31, ../sass/pages/homepage/_homepage.scss */
+  .home-hero__intro__message p {
+    font-size: 20px;
+    line-height: 1.8;
+  }
+}
+/* line 42, ../sass/pages/homepage/_homepage.scss */
 .home-hero__intro__message .round-button {
   color: #ffffff;
   font-size: 16px;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
-/* line 41, ../sass/pages/homepage/_homepage.scss */
+/* line 48, ../sass/pages/homepage/_homepage.scss */
 .home-hero__intro__message .round-button:hover {
   color: #0070b8;
   background: #ffffff;
 }
 
-/* line 51, ../sass/pages/homepage/_homepage.scss */
+/* line 58, ../sass/pages/homepage/_homepage.scss */
 .services {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/world-map-dots.png") no-repeat center;
 }
-/* line 58, ../sass/pages/homepage/_homepage.scss */
+/* line 65, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .main-intro {
   font-family: "HindiRegular";
   font-size: 20px;
@@ -948,36 +1244,36 @@ footer .footer-container {
   line-height: 1.3;
   color: #2f2f2f;
 }
-/* line 65, ../sass/pages/homepage/_homepage.scss */
+/* line 72, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items {
   margin-top: 50px;
   margin-bottom: 70px;
 }
-/* line 69, ../sass/pages/homepage/_homepage.scss */
+/* line 76, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li {
   width: 321px;
   display: inline-block;
   list-style-type: none;
 }
-/* line 74, ../sass/pages/homepage/_homepage.scss */
+/* line 81, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li:not(:first-child) {
   margin-left: 40px;
 }
-/* line 78, ../sass/pages/homepage/_homepage.scss */
+/* line 85, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li .icon {
   color: #50c2c9;
   margin-bottom: 40px;
   font-size: 90px;
   line-height: 1.8;
 }
-/* line 85, ../sass/pages/homepage/_homepage.scss */
+/* line 92, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items__title {
   font-family: "HindiBold";
   font-size: 20px;
   line-height: 1.8;
   color: #2f2f2f;
 }
-/* line 91, ../sass/pages/homepage/_homepage.scss */
+/* line 98, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items__content {
   font-family: "HindiMedium";
   margin-bottom: 20px;
@@ -986,7 +1282,7 @@ footer .footer-container {
   font-size: 15px;
   line-height: 1.8;
 }
-/* line 101, ../sass/pages/homepage/_homepage.scss */
+/* line 108, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo {
   margin: 0 auto;
   max-width: 840px;
@@ -996,39 +1292,70 @@ footer .footer-container {
   font-size: 18px;
   line-height: 1.8;
 }
-/* line 110, ../sass/pages/homepage/_homepage.scss */
+/* line 117, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo strong {
   font-family: "HindiBold";
 }
-/* line 114, ../sass/pages/homepage/_homepage.scss */
+/* line 121, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo span, .services__main-content .lastInfo .btn {
   display: inline-block;
 }
-/* line 118, ../sass/pages/homepage/_homepage.scss */
+/* line 125, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo span:first-child {
   width: 650px;
   line-height: 1.3;
 }
-/* line 123, ../sass/pages/homepage/_homepage.scss */
+/* line 130, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo .btn {
   float: right;
   box-shadow: none;
 }
 
-/* line 132, ../sass/pages/homepage/_homepage.scss */
+/* line 139, ../sass/pages/homepage/_homepage.scss */
 .testimonials {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/abstract-connected.png") no-repeat center;
 }
-/* line 146, ../sass/pages/homepage/_homepage.scss */
-.testimonials .testimonials-slider {
-  max-width: 800px;
-  margin: 0 auto;
+/* line 145, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .video {
+  margin-bottom: 50px;
 }
 /* line 149, ../sass/pages/homepage/_homepage.scss */
-.testimonials .testimonials-slider div {
-  background: red;
+.testimonials__main-content .testimonials-slider {
+  max-width: 730px;
+  margin: 0 auto;
+}
+/* line 153, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .testimonials-slider .ts-items {
+  margin: 0 10px;
+  text-align: center;
+}
+/* line 158, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .testimonials-slider .ts-items img, .testimonials__main-content .testimonials-slider .ts-items span, .testimonials__main-content .testimonials-slider .ts-items .icon {
+  display: block;
+}
+/* line 161, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .testimonials-slider .ts-items > img {
+  margin-bottom: 30px;
+  width: 116px;
+  height: 112px;
+  display: inline-table;
+}
+/* line 168, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .testimonials-slider .ts-items .name, .testimonials__main-content .testimonials-slider .ts-items .title {
+  font-family: "HindiBold";
+  color: #2f2f2f;
+}
+/* line 173, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .testimonials-slider .ts-items .name {
+  font-size: 20px;
+  line-height: 1.3;
+}
+/* line 177, ../sass/pages/homepage/_homepage.scss */
+.testimonials__main-content .testimonials-slider .ts-items .title {
+  font-size: 15px;
+  line-height: 1.8;
 }
 
 /*# sourceMappingURL=style.css.map */
