--- a/sass/components/_slick-theme.scss
+++ b/sass/components/_slick-theme.scss
@@ -2,7 +2,7 @@
 
 // Default Variables
 
-$slick-font-path: "./fonts/" !default;
+$slick-font-path: "../fonts/slick-slider/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
@@ -38,7 +38,7 @@ $slick-opacity-not-active: 0.25 !default;
 
 .slick-list {
     .slick-loading & {
-        background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
+        background: #fff slick-image-url("../images/slick-slider/ajax-loader.gif") center center no-repeat;
     }
 }
 
