--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -21,15 +21,22 @@
 
 			h1{
 				margin: 0;
-				font-size: 66px;
-				line-height: 1;
+				@include font-size(66px, 1); // fz - lh
 				font-family: $hi-b;
+
+				@include screen(mobile-l-max){
+					@include font-size(55px, 1);
+				}
 			}
 			p{
 			   margin: 50px 0;
 				font-size: 22px;
 				line-height: 30px;
 				font-family: $hi-m;
+
+				@include screen(mobile-l-max){
+					@include font-size(20px);
+				}
 			}
 
 			.round-button{
@@ -134,20 +141,43 @@
 	margin-bottom: 130px;
 	background: url('../images/homepage/abstract-connected.png') no-repeat center;	
 
-	// &__main-content{
+	&__main-content{
+		.video{
+			margin-bottom: 50px;
+		}
 
-	// 	.main-intro{
-	// 		font-family: $hi-r;
-	// 		@include font-size(20px);
-	// 		line-height: 1.3;
-	// 		color: darken($light-grey, 40%);
-	// 	}
-	// }
-	.testimonials-slider{
-		max-width: 800px;
-	   margin: 0 auto;
-	   div{
-	   	background: red;
-	   }
+		.testimonials-slider{
+			max-width: 730px;
+		   margin: 0 auto;
+		   
+		   .ts-items{
+		   	// background: red;
+		   	margin: 0 10px;
+		   	text-align: center;
+
+		   	img, span, .icon{
+		   		display: block;
+		   	}
+		   	> img {
+					margin-bottom: 30px;
+		   		width: 116px;
+		   		height: 112px;
+		   		display: inline-table;
+		   	}
+
+		   	.name, .title{
+		   		font-family: $hi-b;
+		   		color: darken($light-grey, 40%);
+		   	}
+
+		   	.name{
+		   		@include font-size(20px, 1.3);
+		   	}
+
+		   	.title{
+		   		@include font-size(15px);
+		   	}
+		   }
+		}
 	}
 }
