--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,8 @@
 @import "helpers/mixin";
 
 @import "components/components";
+@import "components/slick";
+@import "components/slick-theme";
 
 @import "layout/layout";
 @import "pages/pages";
