--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,11 @@ p {
   margin: 0;
 }
 
+/* line 428, ../sass/base/_reset.scss */
+ul {
+  padding: 0;
+}
+
 @font-face {
   font-family: HindiBold;
   src: url("../fonts/site/Hind-Bold.ttf") format("truetype");
@@ -585,17 +590,23 @@ body {
     width: 1180px;
   }
 }
+@media only screen and (max-width: 767px) {
+  /* line 5, ../sass/components/_components.scss */
+  .container-fluid {
+    padding: 0 8px;
+  }
+}
 
-/* line 16, ../sass/components/_components.scss */
+/* line 20, ../sass/components/_components.scss */
 .main-content > :first-child {
   padding-top: 200px;
 }
 
-/* line 22, ../sass/components/_components.scss */
+/* line 26, ../sass/components/_components.scss */
 .white-section {
   background-color: #ffffff;
 }
-/* line 28, ../sass/components/_components.scss */
+/* line 32, ../sass/components/_components.scss */
 .white-section__header .section-intro {
   margin: 80px 0px 30px 0;
   font-family: "HindiRegular";
@@ -603,11 +614,11 @@ body {
   font-size: 16px;
   line-height: 1.8;
 }
-/* line 35, ../sass/components/_components.scss */
+/* line 39, ../sass/components/_components.scss */
 .white-section__header .section-intro strong {
   font-family: "HindiBold";
 }
-/* line 37, ../sass/components/_components.scss */
+/* line 41, ../sass/components/_components.scss */
 .white-section__header .section-intro:before, .white-section__header .section-intro:after {
   content: '';
   width: 126px;
@@ -616,29 +627,38 @@ body {
   vertical-align: middle;
   background: #f0f0f0;
 }
-/* line 46, ../sass/components/_components.scss */
+/* line 50, ../sass/components/_components.scss */
 .white-section__header .section-intro:before {
   margin-right: 7px;
 }
-/* line 49, ../sass/components/_components.scss */
+/* line 53, ../sass/components/_components.scss */
 .white-section__header .section-intro:after {
   margin-left: 7px;
 }
-/* line 54, ../sass/components/_components.scss */
+/* line 58, ../sass/components/_components.scss */
 .white-section__header .gradientTitle {
   color: #2476cf;
   margin-bottom: 7px;
   font-family: "HindiLight";
   font-size: 52px;
-  line-height: 1.8;
+  line-height: 1.3;
   background: -webkit-linear-gradient(150deg, #6e3cb7 45%, #2476cf 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+@media only screen and (max-width: 767px) {
+  /* line 58, ../sass/components/_components.scss */
+  .white-section__header .gradientTitle {
+    font-size: 52px;
+    line-height: 1.3;
+  }
+}
 
-/* line 69, ../sass/components/_components.scss */
+/* line 77, ../sass/components/_components.scss */
 .round-button {
   padding: 10px 25px;
+  font-size: 16px;
+  line-height: 1;
   text-decoration: none;
   border: 2px solid #ffffff;
   -webkit-border-radius: 25px;
@@ -646,7 +666,7 @@ body {
   border-radius: 25px;
 }
 
-/* line 77, ../sass/components/_components.scss */
+/* line 86, ../sass/components/_components.scss */
 .btn {
   padding: 10px 20px;
   color: #ffffff;
@@ -655,7 +675,7 @@ body {
   font-size: 18px;
   line-height: 1.8;
 }
-/* line 86, ../sass/components/_components.scss */
+/* line 95, ../sass/components/_components.scss */
 .btn--simple {
   border: 1px solid #076fe4;
   border-radius: 3px;
@@ -690,7 +710,7 @@ body {
   cursor: not-allowed;
   opacity: 0.5;
 }
-/* line 89, ../sass/components/_components.scss */
+/* line 98, ../sass/components/_components.scss */
 .btn--pill {
   border: 1px solid #3371b2;
   border-color: #3371b2 #2457a3 #164297;
@@ -735,13 +755,13 @@ body {
   cursor: not-allowed;
   opacity: 0.5;
 }
-/* line 95, ../sass/components/_components.scss */
+/* line 104, ../sass/components/_components.scss */
 .btn--blue {
   color: #ffffff;
   background: #0070b8;
 }
 
-/* line 102, ../sass/components/_components.scss */
+/* line 111, ../sass/components/_components.scss */
 .main-generic-link {
   color: #0070b8;
   font-family: "HindiSemiBold";
@@ -750,7 +770,7 @@ body {
   line-height: 1.8;
 }
 
-/* line 111, ../sass/components/_components.scss */
+/* line 120, ../sass/components/_components.scss */
 .icon {
   display: inline-block;
   width: 1em;
@@ -1078,27 +1098,49 @@ body {
 .nav-container {
   height: 100%;
   max-width: 1180px;
+  margin: 0 auto;
+  content: '';
+  display: table;
+  clear: both;
+}
+@media only screen and (min-width: 1180px) {
+  /* line 27, ../sass/layout/header/_header.scss */
+  .nav-container {
+    width: 1180px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  /* line 27, ../sass/layout/header/_header.scss */
+  .nav-container {
+    display: block;
+  }
 }
 
-/* line 32, ../sass/layout/header/_header.scss */
+/* line 42, ../sass/layout/header/_header.scss */
 .logo {
   float: left;
 }
 
-/* line 36, ../sass/layout/header/_header.scss */
+/* line 46, ../sass/layout/header/_header.scss */
 .main-nav {
   float: right;
   list-style-type: none;
 }
-/* line 40, ../sass/layout/header/_header.scss */
+@media only screen and (max-width: 767px) {
+  /* line 46, ../sass/layout/header/_header.scss */
+  .main-nav {
+    padding-left: 0;
+  }
+}
+/* line 54, ../sass/layout/header/_header.scss */
 .main-nav__listItem {
   display: inline-block;
 }
-/* line 43, ../sass/layout/header/_header.scss */
+/* line 57, ../sass/layout/header/_header.scss */
 .main-nav__listItem:not(:first-child) a {
   margin-left: 30px;
 }
-/* line 47, ../sass/layout/header/_header.scss */
+/* line 61, ../sass/layout/header/_header.scss */
 .main-nav__listItem a {
   padding: 6px 15px 3px 15px;
   color: #fff;
@@ -1107,7 +1149,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
 }
-/* line 55, ../sass/layout/header/_header.scss */
+/* line 69, ../sass/layout/header/_header.scss */
 .main-nav__listItem a:hover, .main-nav__listItem a.active {
   padding: 6px 15px 3px 15px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -1244,36 +1286,76 @@ footer .footer-container {
   line-height: 1.3;
   color: #2f2f2f;
 }
-/* line 72, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .inline-items {
-  margin-top: 50px;
-  margin-bottom: 70px;
-}
 /* line 76, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items {
+  margin: 50px auto 70px auto;
+  content: '';
+  display: table;
+  clear: both;
+}
+@media only screen and (max-width: 767px) {
+  /* line 76, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items {
+    padding-left: 0px;
+  }
+}
+/* line 84, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li {
   width: 321px;
-  display: inline-block;
+  display: block;
+  float: left;
   list-style-type: none;
 }
-/* line 81, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .inline-items li:not(:first-child) {
-  margin-left: 40px;
+@media only screen and (max-width: 1023px) {
+  /* line 84, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items li {
+    width: 235px;
+  }
 }
-/* line 85, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 84, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items li {
+    width: 200px;
+  }
+}
+/* line 98, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .inline-items li:not(:first-child) {
+  margin-left: 20px;
+}
+@media only screen and (max-width: 767px) {
+  /* line 98, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items li:not(:first-child) {
+    margin-left: 5px;
+  }
+}
+/* line 106, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li .icon {
   color: #50c2c9;
   margin-bottom: 40px;
   font-size: 90px;
   line-height: 1.8;
 }
-/* line 92, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 106, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items li .icon {
+    margin-bottom: 28px;
+  }
+}
+/* line 117, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items__title {
   font-family: "HindiBold";
+  color: #2f2f2f;
   font-size: 20px;
   line-height: 1.8;
-  color: #2f2f2f;
 }
-/* line 98, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 117, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items__title {
+    font-size: 18px;
+    line-height: 1.8;
+  }
+}
+/* line 128, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items__content {
   font-family: "HindiMedium";
   margin-bottom: 20px;
@@ -1282,7 +1364,18 @@ footer .footer-container {
   font-size: 15px;
   line-height: 1.8;
 }
-/* line 108, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 128, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items__content {
+    font-size: 13px;
+    line-height: 1.8;
+  }
+  /* line 139, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items__content .main-generic-link {
+    display: block;
+  }
+}
+/* line 146, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo {
   margin: 0 auto;
   max-width: 840px;
@@ -1292,67 +1385,91 @@ footer .footer-container {
   font-size: 18px;
   line-height: 1.8;
 }
-/* line 117, ../sass/pages/homepage/_homepage.scss */
+/* line 155, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo strong {
   font-family: "HindiBold";
 }
-/* line 121, ../sass/pages/homepage/_homepage.scss */
+/* line 159, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo span, .services__main-content .lastInfo .btn {
   display: inline-block;
 }
-/* line 125, ../sass/pages/homepage/_homepage.scss */
+/* line 163, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo span:first-child {
-  width: 650px;
+  width: 620px;
   line-height: 1.3;
 }
-/* line 130, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 767px) {
+  /* line 163, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .lastInfo span:first-child {
+    width: 100%;
+    line-height: 1.8;
+    margin-bottom: 26px;
+  }
+}
+/* line 174, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo .btn {
   float: right;
   box-shadow: none;
 }
+@media only screen and (max-width: 767px) {
+  /* line 174, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .lastInfo .btn {
+    float: none;
+    display: inline-block;
+  }
+}
+@media only screen and (max-width: 1023px) {
+  /* line 146, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .lastInfo {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.8;
+  }
+}
 
-/* line 139, ../sass/pages/homepage/_homepage.scss */
+/* line 195, ../sass/pages/homepage/_homepage.scss */
 .testimonials {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/abstract-connected.png") no-repeat center;
 }
-/* line 145, ../sass/pages/homepage/_homepage.scss */
+/* line 201, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .video {
   margin-bottom: 50px;
 }
-/* line 149, ../sass/pages/homepage/_homepage.scss */
+/* line 205, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider {
   max-width: 730px;
   margin: 0 auto;
 }
-/* line 153, ../sass/pages/homepage/_homepage.scss */
+/* line 209, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items {
   margin: 0 10px;
   text-align: center;
 }
-/* line 158, ../sass/pages/homepage/_homepage.scss */
+/* line 214, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items img, .testimonials__main-content .testimonials-slider .ts-items span, .testimonials__main-content .testimonials-slider .ts-items .icon {
   display: block;
 }
-/* line 161, ../sass/pages/homepage/_homepage.scss */
+/* line 217, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items > img {
   margin-bottom: 30px;
   width: 116px;
   height: 112px;
   display: inline-table;
 }
-/* line 168, ../sass/pages/homepage/_homepage.scss */
+/* line 224, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name, .testimonials__main-content .testimonials-slider .ts-items .title {
   font-family: "HindiBold";
   color: #2f2f2f;
 }
-/* line 173, ../sass/pages/homepage/_homepage.scss */
+/* line 229, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name {
   font-size: 20px;
   line-height: 1.3;
 }
-/* line 177, ../sass/pages/homepage/_homepage.scss */
+/* line 233, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .title {
   font-size: 15px;
   line-height: 1.8;
