--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,8 @@
 @import "components/components";
 @import "components/slick";
 @import "components/slick-theme";
+@import "components/responsive-nav";
+
 
 @import "layout/layout";
 @import "pages/pages";
