--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -14,11 +14,19 @@ body{
    @include screen(mobile-l-max){
 		padding: 0 8px;
 	}
+
+	@include screen(mobile-max){
+		padding: 0;
+	}
 }
 
 .main-content{
 	& > :first-child{
     	padding-top: 200px;
+
+    	@include screen(mobile-l-max){
+			padding-top: 100px;
+    	}
     }
 }
 
@@ -68,6 +76,10 @@ body{
 
 			@include screen(mobile-l-max){
 				@include font-size(52px, 1.3);
+			}
+
+			@include screen(mobile-max){
+				@include font-size(25px, 1.2);
 			}
 		}
 	}
@@ -122,4 +134,13 @@ body{
 	width: 1em;
 	height: 1em;
 	fill: currentColor;
+}
+
+// Video
+// Note :: This is referent to the "Video Aspect Ratio" section in global.js 
+.video{
+	@include screen(mobile-max){
+		// width: 100%    !important;
+		// height: auto   !important;
+	}
 }
