--- a/css/style.css
+++ b/css/style.css
@@ -1507,7 +1507,7 @@ footer .footer-container {
     padding-left: 0px;
   }
 }
-/* line 92, ../sass/pages/homepage/_homepage.scss */
+/* line 93, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li {
   width: 321px;
   display: block;
@@ -1515,28 +1515,40 @@ footer .footer-container {
   list-style-type: none;
 }
 @media only screen and (max-width: 1023px) {
-  /* line 92, ../sass/pages/homepage/_homepage.scss */
+  /* line 93, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items li {
     width: 235px;
   }
 }
 @media only screen and (max-width: 767px) {
-  /* line 92, ../sass/pages/homepage/_homepage.scss */
+  /* line 93, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items li {
     width: 200px;
   }
 }
-/* line 106, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 639px) {
+  /* line 93, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items li {
+    width: 100%;
+  }
+}
+/* line 111, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li:not(:first-child) {
   margin-left: 20px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 106, ../sass/pages/homepage/_homepage.scss */
+  /* line 111, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items li:not(:first-child) {
     margin-left: 5px;
   }
 }
-/* line 114, ../sass/pages/homepage/_homepage.scss */
+@media only screen and (max-width: 639px) {
+  /* line 111, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .inline-items li:not(:first-child) {
+    margin-left: 0px;
+  }
+}
+/* line 123, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items li .icon {
   color: #50c2c9;
   margin-bottom: 40px;
@@ -1544,12 +1556,12 @@ footer .footer-container {
   line-height: 1.8;
 }
 @media only screen and (max-width: 767px) {
-  /* line 114, ../sass/pages/homepage/_homepage.scss */
+  /* line 123, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items li .icon {
     margin-bottom: 28px;
   }
 }
-/* line 125, ../sass/pages/homepage/_homepage.scss */
+/* line 134, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items__title {
   font-family: "HindiBold";
   color: #2f2f2f;
@@ -1557,13 +1569,13 @@ footer .footer-container {
   line-height: 1.8;
 }
 @media only screen and (max-width: 767px) {
-  /* line 125, ../sass/pages/homepage/_homepage.scss */
+  /* line 134, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items__title {
     font-size: 18px;
     line-height: 1.8;
   }
 }
-/* line 136, ../sass/pages/homepage/_homepage.scss */
+/* line 145, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .inline-items__content {
   font-family: "HindiMedium";
   margin-bottom: 20px;
@@ -1573,17 +1585,17 @@ footer .footer-container {
   line-height: 1.8;
 }
 @media only screen and (max-width: 767px) {
-  /* line 136, ../sass/pages/homepage/_homepage.scss */
+  /* line 145, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items__content {
     font-size: 13px;
     line-height: 1.8;
   }
-  /* line 147, ../sass/pages/homepage/_homepage.scss */
+  /* line 156, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .inline-items__content .main-generic-link {
     display: block;
   }
 }
-/* line 154, ../sass/pages/homepage/_homepage.scss */
+/* line 163, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo {
   margin: 0 auto;
   max-width: 840px;
@@ -1593,41 +1605,41 @@ footer .footer-container {
   font-size: 18px;
   line-height: 1.8;
 }
-/* line 163, ../sass/pages/homepage/_homepage.scss */
+/* line 172, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo strong {
   font-family: "HindiBold";
 }
-/* line 167, ../sass/pages/homepage/_homepage.scss */
+/* line 176, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo span, .services__main-content .lastInfo .btn {
   display: inline-block;
 }
-/* line 171, ../sass/pages/homepage/_homepage.scss */
+/* line 180, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo span:first-child {
   width: 620px;
   line-height: 1.3;
 }
 @media only screen and (max-width: 767px) {
-  /* line 171, ../sass/pages/homepage/_homepage.scss */
+  /* line 180, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .lastInfo span:first-child {
     width: 100%;
     line-height: 1.8;
     margin-bottom: 26px;
   }
 }
-/* line 182, ../sass/pages/homepage/_homepage.scss */
+/* line 191, ../sass/pages/homepage/_homepage.scss */
 .services__main-content .lastInfo .btn {
   float: right;
   box-shadow: none;
 }
 @media only screen and (max-width: 767px) {
-  /* line 182, ../sass/pages/homepage/_homepage.scss */
+  /* line 191, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .lastInfo .btn {
     float: none;
     display: inline-block;
   }
 }
 @media only screen and (max-width: 1023px) {
-  /* line 154, ../sass/pages/homepage/_homepage.scss */
+  /* line 163, ../sass/pages/homepage/_homepage.scss */
   .services__main-content .lastInfo {
     width: 100%;
     text-align: center;
@@ -1636,60 +1648,60 @@ footer .footer-container {
   }
 }
 
-/* line 203, ../sass/pages/homepage/_homepage.scss */
+/* line 212, ../sass/pages/homepage/_homepage.scss */
 .testimonials {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/abstract-connected.png") no-repeat center;
 }
-/* line 209, ../sass/pages/homepage/_homepage.scss */
+/* line 218, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .video {
   margin-bottom: 50px;
 }
-/* line 217, ../sass/pages/homepage/_homepage.scss */
+/* line 226, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider {
   max-width: 730px;
   margin: 0 auto;
 }
 @media only screen and (max-width: 767px) {
-  /* line 217, ../sass/pages/homepage/_homepage.scss */
+  /* line 226, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 320px;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 217, ../sass/pages/homepage/_homepage.scss */
+  /* line 226, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 300px;
   }
 }
-/* line 229, ../sass/pages/homepage/_homepage.scss */
+/* line 238, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items {
   margin: 0 10px;
   text-align: center;
 }
-/* line 234, ../sass/pages/homepage/_homepage.scss */
+/* line 243, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items img, .testimonials__main-content .testimonials-slider .ts-items span, .testimonials__main-content .testimonials-slider .ts-items .icon {
   display: block;
 }
-/* line 237, ../sass/pages/homepage/_homepage.scss */
+/* line 246, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items > img {
   margin-bottom: 30px;
   width: 116px;
   height: 112px;
   display: inline-table;
 }
-/* line 244, ../sass/pages/homepage/_homepage.scss */
+/* line 253, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name, .testimonials__main-content .testimonials-slider .ts-items .title {
   font-family: "HindiBold";
   color: #2f2f2f;
 }
-/* line 249, ../sass/pages/homepage/_homepage.scss */
+/* line 258, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name {
   font-size: 20px;
   line-height: 1.3;
 }
-/* line 253, ../sass/pages/homepage/_homepage.scss */
+/* line 262, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .title {
   font-size: 15px;
   line-height: 1.8;
