--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,11 @@ body {
 .white-section__header .section-intro:after {
   margin-left: 7px;
 }
-/* line 66, ../sass/components/_components.scss */
+/* line 67, ../sass/components/_components.scss */
+.white-section__header .section-intro--no-decoration:before, .white-section__header .section-intro--no-decoration:after {
+  content: none;
+}
+/* line 73, ../sass/components/_components.scss */
 .white-section__header .gradientTitle {
   color: #2476cf;
   margin-bottom: 7px;
@@ -659,21 +663,27 @@ body {
   -webkit-text-fill-color: transparent;
 }
 @media only screen and (max-width: 767px) {
-  /* line 66, ../sass/components/_components.scss */
+  /* line 73, ../sass/components/_components.scss */
   .white-section__header .gradientTitle {
     font-size: 52px;
     line-height: 1.3;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 66, ../sass/components/_components.scss */
+  /* line 73, ../sass/components/_components.scss */
   .white-section__header .gradientTitle {
     font-size: 25px;
     line-height: 1.2;
   }
 }
 
-/* line 89, ../sass/components/_components.scss */
+/* line 96, ../sass/components/_components.scss */
+.quote {
+  color: #0070b8;
+  font-family: "HindiSemiBold";
+}
+
+/* line 102, ../sass/components/_components.scss */
 .round-button {
   padding: 10px 25px;
   font-size: 16px;
@@ -685,7 +695,7 @@ body {
   border-radius: 25px;
 }
 
-/* line 98, ../sass/components/_components.scss */
+/* line 111, ../sass/components/_components.scss */
 .btn {
   padding: 10px 20px;
   color: #ffffff;
@@ -694,7 +704,16 @@ body {
   font-size: 18px;
   line-height: 1.8;
 }
-/* line 107, ../sass/components/_components.scss */
+@media only screen and (max-width: 1023px) {
+  /* line 111, ../sass/components/_components.scss */
+  .btn {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.8;
+  }
+}
+/* line 127, ../sass/components/_components.scss */
 .btn--simple {
   border: 1px solid #076fe4;
   border-radius: 3px;
@@ -729,7 +748,7 @@ body {
   cursor: not-allowed;
   opacity: 0.5;
 }
-/* line 110, ../sass/components/_components.scss */
+/* line 130, ../sass/components/_components.scss */
 .btn--pill {
   border: 1px solid #3371b2;
   border-color: #3371b2 #2457a3 #164297;
@@ -774,13 +793,13 @@ body {
   cursor: not-allowed;
   opacity: 0.5;
 }
-/* line 116, ../sass/components/_components.scss */
+/* line 136, ../sass/components/_components.scss */
 .btn--blue {
   color: #ffffff;
   background: #0070b8;
 }
 
-/* line 123, ../sass/components/_components.scss */
+/* line 143, ../sass/components/_components.scss */
 .main-generic-link {
   color: #0070b8;
   font-family: "HindiSemiBold";
@@ -789,12 +808,17 @@ body {
   line-height: 1.8;
 }
 
-/* line 132, ../sass/components/_components.scss */
+/* line 152, ../sass/components/_components.scss */
 .icon {
   display: inline-block;
   width: 1em;
   height: 1em;
   fill: currentColor;
+}
+
+/* line 168, ../sass/components/_components.scss */
+.left-section {
+  text-align: left;
 }
 
 /* Slider */
@@ -1596,112 +1620,182 @@ footer .footer-container {
   }
 }
 /* line 163, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .lastInfo {
+.services__main-content .quote {
   margin: 0 auto;
   max-width: 840px;
-  color: #0070b8;
-  font-family: "HindiSemiBold";
   text-align: left;
   font-size: 18px;
   line-height: 1.8;
 }
-/* line 172, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .lastInfo strong {
+/* line 170, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .quote strong {
   font-family: "HindiBold";
 }
-/* line 176, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .lastInfo span, .services__main-content .lastInfo .btn {
+/* line 174, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .quote span, .services__main-content .quote .btn {
   display: inline-block;
 }
-/* line 180, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .lastInfo span:first-child {
+/* line 178, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .quote span:first-child {
   width: 620px;
   line-height: 1.3;
 }
 @media only screen and (max-width: 767px) {
-  /* line 180, ../sass/pages/homepage/_homepage.scss */
-  .services__main-content .lastInfo span:first-child {
+  /* line 178, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .quote span:first-child {
     width: 100%;
     line-height: 1.8;
     margin-bottom: 26px;
   }
 }
-/* line 191, ../sass/pages/homepage/_homepage.scss */
-.services__main-content .lastInfo .btn {
+/* line 189, ../sass/pages/homepage/_homepage.scss */
+.services__main-content .quote .btn {
   float: right;
   box-shadow: none;
 }
 @media only screen and (max-width: 767px) {
-  /* line 191, ../sass/pages/homepage/_homepage.scss */
-  .services__main-content .lastInfo .btn {
+  /* line 189, ../sass/pages/homepage/_homepage.scss */
+  .services__main-content .quote .btn {
     float: none;
     display: inline-block;
   }
 }
-@media only screen and (max-width: 1023px) {
-  /* line 163, ../sass/pages/homepage/_homepage.scss */
-  .services__main-content .lastInfo {
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    line-height: 1.8;
-  }
+
+/* line 203, ../sass/pages/homepage/_homepage.scss */
+.expertise {
+  width: 100%;
+  content: '';
+  display: table;
+  clear: both;
+  -webkit-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.17);
+  -moz-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.17);
+  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.17);
+}
+/* line 210, ../sass/pages/homepage/_homepage.scss */
+.expertise .section-side-left, .expertise .section-side-bar {
+  float: left;
+}
+/* line 214, ../sass/pages/homepage/_homepage.scss */
+.expertise .section-side-bar {
+  margin-right: 65px;
+}
+/* line 217, ../sass/pages/homepage/_homepage.scss */
+.expertise .section-side-bar img {
+  vertical-align: bottom;
+}
+/* line 220, ../sass/pages/homepage/_homepage.scss */
+.expertise .section-side-left {
+  width: 900px;
+}
+/* line 224, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items {
+  color: #363636;
+  font-family: "HindiMedium";
+}
+/* line 228, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-left {
+  width: 350px;
+  float: left;
+}
+/* line 232, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-left p {
+  margin-bottom: 30px;
+  font-size: 15px;
+  line-height: 1.3;
+}
+/* line 237, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-left p strong {
+  font-family: "HindiBold";
+}
+/* line 243, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-left .quote .icon-tips {
+  font-size: 60px;
+  float: left;
+}
+/* line 247, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-left .quote .btn-container {
+  margin-top: 15px;
+  text-align: center;
+}
+/* line 253, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-right {
+  width: 490px;
+  float: right;
+}
+/* line 257, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-right ul {
+  margin: 0;
+  padding: 0;
+}
+/* line 262, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-right ul li .item-title {
+  margin: 0 0 10px 0;
+  padding: 0;
+  font-family: "HindiBold";
+  font-size: 20px;
+  line-height: 1;
+}
+/* line 269, ../sass/pages/homepage/_homepage.scss */
+.expertise .inline-items .col-right ul li .item-info {
+  margin: 0 0 15px 0;
+  font-size: 15px;
+  line-height: 1.5;
 }
 
-/* line 212, ../sass/pages/homepage/_homepage.scss */
+/* line 281, ../sass/pages/homepage/_homepage.scss */
 .testimonials {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/abstract-connected.png") no-repeat center;
 }
-/* line 218, ../sass/pages/homepage/_homepage.scss */
+/* line 287, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .video {
   margin-bottom: 50px;
 }
-/* line 226, ../sass/pages/homepage/_homepage.scss */
+/* line 295, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider {
   max-width: 730px;
   margin: 0 auto;
 }
 @media only screen and (max-width: 767px) {
-  /* line 226, ../sass/pages/homepage/_homepage.scss */
+  /* line 295, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 320px;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 226, ../sass/pages/homepage/_homepage.scss */
+  /* line 295, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 300px;
   }
 }
-/* line 238, ../sass/pages/homepage/_homepage.scss */
+/* line 307, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items {
   margin: 0 10px;
   text-align: center;
 }
-/* line 243, ../sass/pages/homepage/_homepage.scss */
+/* line 312, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items img, .testimonials__main-content .testimonials-slider .ts-items span, .testimonials__main-content .testimonials-slider .ts-items .icon {
   display: block;
 }
-/* line 246, ../sass/pages/homepage/_homepage.scss */
+/* line 315, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items > img {
   margin-bottom: 30px;
   width: 116px;
   height: 112px;
   display: inline-table;
 }
-/* line 253, ../sass/pages/homepage/_homepage.scss */
+/* line 322, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name, .testimonials__main-content .testimonials-slider .ts-items .title {
   font-family: "HindiBold";
   color: #2f2f2f;
 }
-/* line 258, ../sass/pages/homepage/_homepage.scss */
+/* line 327, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name {
   font-size: 20px;
   line-height: 1.3;
 }
-/* line 262, ../sass/pages/homepage/_homepage.scss */
+/* line 331, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .title {
   font-size: 15px;
   line-height: 1.8;
