--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -160,11 +160,9 @@
 			}
 		}
 
-		.lastInfo{
+		.quote{
 			margin: 0 auto;
 			max-width: 840px;
-			color: $main-blue;
-			font-family: $hi-sb;
 			text-align: left;
 
 			@include font-size(18px);
@@ -197,12 +195,83 @@
 					display: inline-block;
 				}
 			}
+		}
+	}
+}
 
-			@include screen(tablet-max){
-				width: 100%;
-				text-align: center;
+// Expertise - 3
+.expertise{
+	width: 100%;
 
-				@include font-size(16px);
+	@include clearfix;
+	@include box-shadow( 0px 0px 8px 2px rgba(0,0,0,0.17) );
+	
+	// Section Left Bar General Settings
+	.section-side-left, .section-side-bar{
+		float: left;
+	}
+
+	.section-side-bar{
+	   margin-right: 65px;	
+
+		img{ vertical-align: bottom; }
+	}
+
+	.section-side-left{
+		width: 900px;
+	}
+
+	.inline-items{
+		color: $dark-grey;
+		font-family: $hi-m;
+
+		.col-left{
+			width: 350px;
+			float: left;		
+
+			p{
+				margin-bottom: 30px;
+
+				@include font-size(15px, 1.3);
+
+				strong{
+					font-family: $hi-b;
+				}
+			}
+
+			.quote{
+				.icon-tips{
+					font-size: 60px;
+					float: left;
+				}
+				.btn-container{
+					margin-top: 15px;
+					text-align: center;
+				}
+			}
+		}
+		.col-right{
+			width: 490px;
+			float: right;
+
+			ul{
+				margin: 0;
+				padding: 0;
+
+				li{
+					.item-title{
+						margin: 0 0 10px 0;
+						padding:0;
+						font-family: $hi-b;
+
+						@include font-size(20px, 1);
+					}
+					.item-info{
+						margin: 0 0 15px 0;
+
+						@include font-size(15px, 1.5);
+					}
+				}
 			}
 		}
 	}
