--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -92,6 +92,62 @@ body{
 	}
 }
 
+.center-section{
+	margin-bottom: 130px;
+	text-align: center;
+
+	&__main-content{
+
+		.main-intro{
+			font-family: $hi-r;
+			@include font-size(20px);
+			line-height: 1.3;
+			color: darken($light-grey, 40%);
+		}
+
+		.inline-items{
+	      margin: 50px auto 70px auto;
+	      
+	      @include clearfix;
+
+	      @include screen(mobile-l-max){
+	      	padding-left: 0px;
+			}
+
+			li{
+				width: 321px;
+				display: block;
+				float: left;
+				list-style-type: none;
+
+				@include screen(tablet-max){
+					width: 235px;
+				}
+				
+				@include screen(mobile-l-max){
+					width: 200px;
+				}
+
+				@include screen(mobile-max){
+					width: 100%;
+				}
+
+				&:not(:first-child){
+					margin-left: 20px;
+
+					@include screen(mobile-l-max){
+						margin-left: 5px;
+					}
+
+					@include screen(mobile-max){
+						margin-left: 0px;
+					}
+				}
+			}
+		}
+	}
+}
+
 // Quotes :: Default values.
 .quote{
 	color: $main-blue;
