--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -64,70 +64,19 @@
 
 // Services - Section 2
 .services{
-	text-align: center;
-	margin-bottom: 130px;
 	background: url('../images/homepage/world-map-dots.png') no-repeat center;	
 
 	&__main-content{
 
-		.main-intro{
-			font-family: $hi-r;
-			@include font-size(20px);
-			line-height: 1.3;
-			color: darken($light-grey, 40%);
-
-			// @include screen(mobile-l-max){
-
-			// }
-		}
-
 		.inline-items{
-	      margin: 50px auto 70px auto;
-	      
-	      @include clearfix;
 
-	      @include screen(mobile-l-max){
-	      	padding-left: 0px;
-			}
+			.icon{
+				color: $teal;
+				margin-bottom: 40px;
+				@include font-size(90px);
 
-			li{
-				width: 321px;
-				display: block;
-				float: left;
-				list-style-type: none;
-
-				@include screen(tablet-max){
-					width: 235px;
-				}
-				
 				@include screen(mobile-l-max){
-					width: 200px;
-				}
-
-				@include screen(mobile-max){
-					width: 100%;
-				}
-
-				&:not(:first-child){
-					margin-left: 20px;
-
-					@include screen(mobile-l-max){
-						margin-left: 5px;
-					}
-
-					@include screen(mobile-max){
-						margin-left: 0px;
-					}
-				}
-
-				.icon{
-					color: $teal;
-					margin-bottom: 40px;
-					@include font-size(90px);
-
-					@include screen(mobile-l-max){
-						margin-bottom: 28px;
-					}
+					margin-bottom: 28px;
 				}
 			}
 
@@ -271,6 +220,111 @@
 
 						@include font-size(15px, 1.5);
 					}
+				}
+			}
+		}
+	}
+}
+
+// About - 4
+.about{
+
+	&__main-content{
+
+		.main-intro{
+			max-width: 780px;
+			margin: 0 auto;
+		}
+		
+		.team-member{
+			margin-top: 50px;
+
+			img{
+				margin-right: 25px;
+				display: inline-block;
+			}
+
+			&__info{
+				display: inline-block;
+				text-align: left;
+				vertical-align: top;
+
+				.name-position{
+					display: block;
+					margin-bottom: 10px;
+					font-family: $hi-b;
+					margin-bottom: 15px;
+
+					@include font-size(20px, 1.4);
+				}
+				a{
+					color: $main-blue;
+					display: block;
+					font-family: $hi-sb;
+					text-decoration: none;
+
+					@include font-size(15px, 1);
+				}
+			}
+		}
+
+		.inline-items{
+			li{
+			   padding: 20px;
+				height: 185px;
+				text-align: left;
+				border: 1px solid #e2e7e2;
+
+				@include screen(mobile-max){
+					text-align: center;
+				}
+			}
+
+			.newsbyte-area{
+				
+				svg{
+					color: $teal;
+					vertical-align: middle;
+					display: inline-block;
+
+					@include font-size(25px);
+				}
+
+				p{
+					color: $light-grey;
+					font-family: $hi-sb;
+					display: inline-block;
+					text-transform: uppercase;
+	
+					@include font-size(12px, 1.3);
+				}
+			}
+
+			&__title{
+				font-family: $hi-b;
+				color: darken($light-grey, 40%);
+
+				@include font-size(20px);
+
+				@include screen(mobile-l-max){
+					@include font-size(18px);
+				}
+			}
+
+			&__content{
+				font-family: $hi-m;
+				margin-bottom: 20px;
+				line-height: 1.3;
+				color: $light-grey;
+
+				@include font-size(15px);
+
+				@include screen(mobile-l-max){
+					@include font-size(13px);
+				}
+
+				.main-generic-link{
+					display: block;
 				}
 			}
 		}
