--- a/css/style.css
+++ b/css/style.css
@@ -1790,6 +1790,9 @@ footer .footer-container {
   height: 185px;
   text-align: left;
   border: 1px solid #e2e7e2;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
 }
 @media only screen and (max-width: 639px) {
   /* line 272, ../sass/pages/homepage/_homepage.scss */
@@ -1797,7 +1800,7 @@ footer .footer-container {
     text-align: center;
   }
 }
-/* line 285, ../sass/pages/homepage/_homepage.scss */
+/* line 286, ../sass/pages/homepage/_homepage.scss */
 .about__main-content .inline-items .newsbyte-area svg {
   color: #50c2c9;
   vertical-align: middle;
@@ -1805,7 +1808,7 @@ footer .footer-container {
   font-size: 25px;
   line-height: 1.8;
 }
-/* line 293, ../sass/pages/homepage/_homepage.scss */
+/* line 294, ../sass/pages/homepage/_homepage.scss */
 .about__main-content .inline-items .newsbyte-area p {
   color: #959595;
   font-family: "HindiSemiBold";
@@ -1814,7 +1817,7 @@ footer .footer-container {
   font-size: 12px;
   line-height: 1.3;
 }
-/* line 303, ../sass/pages/homepage/_homepage.scss */
+/* line 304, ../sass/pages/homepage/_homepage.scss */
 .about__main-content .inline-items__title {
   font-family: "HindiBold";
   color: #2f2f2f;
@@ -1822,13 +1825,13 @@ footer .footer-container {
   line-height: 1.8;
 }
 @media only screen and (max-width: 767px) {
-  /* line 303, ../sass/pages/homepage/_homepage.scss */
+  /* line 304, ../sass/pages/homepage/_homepage.scss */
   .about__main-content .inline-items__title {
     font-size: 18px;
     line-height: 1.8;
   }
 }
-/* line 314, ../sass/pages/homepage/_homepage.scss */
+/* line 315, ../sass/pages/homepage/_homepage.scss */
 .about__main-content .inline-items__content {
   font-family: "HindiMedium";
   margin-bottom: 20px;
@@ -1838,71 +1841,71 @@ footer .footer-container {
   line-height: 1.8;
 }
 @media only screen and (max-width: 767px) {
-  /* line 314, ../sass/pages/homepage/_homepage.scss */
+  /* line 315, ../sass/pages/homepage/_homepage.scss */
   .about__main-content .inline-items__content {
     font-size: 13px;
     line-height: 1.8;
   }
 }
-/* line 326, ../sass/pages/homepage/_homepage.scss */
+/* line 327, ../sass/pages/homepage/_homepage.scss */
 .about__main-content .inline-items__content .main-generic-link {
   display: block;
 }
 
-/* line 335, ../sass/pages/homepage/_homepage.scss */
+/* line 336, ../sass/pages/homepage/_homepage.scss */
 .testimonials {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/abstract-connected.png") no-repeat center;
 }
-/* line 341, ../sass/pages/homepage/_homepage.scss */
+/* line 342, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .video {
   margin-bottom: 50px;
 }
-/* line 349, ../sass/pages/homepage/_homepage.scss */
+/* line 350, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider {
   max-width: 730px;
   margin: 0 auto;
 }
 @media only screen and (max-width: 767px) {
-  /* line 349, ../sass/pages/homepage/_homepage.scss */
+  /* line 350, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 320px;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 349, ../sass/pages/homepage/_homepage.scss */
+  /* line 350, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 300px;
   }
 }
-/* line 361, ../sass/pages/homepage/_homepage.scss */
+/* line 362, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items {
   margin: 0 10px;
   text-align: center;
 }
-/* line 366, ../sass/pages/homepage/_homepage.scss */
+/* line 367, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items img, .testimonials__main-content .testimonials-slider .ts-items span, .testimonials__main-content .testimonials-slider .ts-items .icon {
   display: block;
 }
-/* line 369, ../sass/pages/homepage/_homepage.scss */
+/* line 370, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items > img {
   margin-bottom: 30px;
   width: 116px;
   height: 112px;
   display: inline-table;
 }
-/* line 376, ../sass/pages/homepage/_homepage.scss */
+/* line 377, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name, .testimonials__main-content .testimonials-slider .ts-items .title {
   font-family: "HindiBold";
   color: #2f2f2f;
 }
-/* line 381, ../sass/pages/homepage/_homepage.scss */
+/* line 382, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name {
   font-size: 20px;
   line-height: 1.3;
 }
-/* line 385, ../sass/pages/homepage/_homepage.scss */
+/* line 386, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .title {
   font-size: 15px;
   line-height: 1.8;
