--- a/sass/helpers/_mixin.scss
+++ b/sass/helpers/_mixin.scss
@@ -77,6 +77,11 @@
             @content;
         }
     }
+    @else if $media == desktop-max {
+        @media only screen and (max-width: $desktop - 1px) {
+            @content;
+        }
+    }
     @else if $media == desktop-l {
         @media only screen and (min-width: $desktop-large) {
             @content;
