--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -155,28 +155,52 @@
 	@include clearfix;
 	@include box-shadow( 0px 0px 8px 2px rgba(0,0,0,0.17) );
 	
+	@include screen(mobile-l-max){
+		padding-left: 20px;
+	}
+
 	// Section Left Bar General Settings
 	.section-side-left, .section-side-bar{
 		float: left;
 	}
 
 	.section-side-bar{
-	   margin-right: 65px;	
+		width: 23%;
+		margin-right: 55px;
 
 		img{ vertical-align: bottom; }
+
+		@include screen(desktop-max){
+			display: none;
+		}
 	}
 
 	.section-side-left{
-		width: 900px;
+		width:70%;
+
+
+		@include screen(desktop-max){
+			width:100%;
+		   margin-bottom: 80px;
+		}
 	}
 
 	.inline-items{
 		color: $dark-grey;
 		font-family: $hi-m;
 
+		@include clearfix;
+
 		.col-left{
 			width: 350px;
-			float: left;		
+			float: left;	
+			margin-right: 65px;	
+			
+			@include screen(mobile-l-max){
+				margin-right: 0;
+			   margin: 0 auto;
+				float: none;
+			}
 
 			p{
 				margin-bottom: 30px;
@@ -185,6 +209,10 @@
 
 				strong{
 					font-family: $hi-b;
+				}
+
+				@include screen(mobile-l-max){
+					@include font-size(13px, 1.3);
 				}
 			}
 
@@ -200,8 +228,8 @@
 			}
 		}
 		.col-right{
-			width: 490px;
-			float: right;
+			width: 320px;
+			float: left;
 
 			ul{
 				margin: 0;
@@ -214,11 +242,19 @@
 						font-family: $hi-b;
 
 						@include font-size(20px, 1);
+
+						@include screen(mobile-l-max){
+							@include font-size(18px, 1);
+						}
 					}
 					.item-info{
 						margin: 0 0 15px 0;
 
 						@include font-size(15px, 1.5);
+
+						@include screen(mobile-l-max){
+							@include font-size(13px, 1.5);
+						}
 					}
 				}
 			}
@@ -349,6 +385,10 @@
 		width: 560px;
 		margin: 0 auto;
 		padding-bottom: 100px;
+		
+		@include screen(mobile-l-max){
+			width: 100%;
+		}
 
 		.main-intro{
 			color: $white;
@@ -357,6 +397,10 @@
 
 		.sign-up__form{
 			margin-bottom: 15px;
+			
+			@include screen(mobile-l-max){
+			   margin: 0 15px;
+			}
 
 			input{
 				width: 100%;
@@ -366,6 +410,7 @@
 				font-family: $hi-r;
 				text-align: left;
 			   border-style: hidden;
+		      box-sizing: border-box;
 
 				@include border-radius(8px);
 				@include font-size(20px, 2);
